--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.example.hp.opencvtest"
-        minSdkVersion 15
+        minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile project(':libraries:opencv')
-    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.google.firebase:firebase-appindexing:10.2.0'
+    compile 'com.rmtheis:tess-two:6.0.3'
+    compile 'com.google.android.gms:play-services-vision:10.2.0'
 }
